<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationY="28dp"
    android:alpha="0"
    android:visibility="gone"
    tools:translationY="0dp"
    tools:alpha="2"
    tools:visibility="visible"
    tools:context=".WorkInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="48dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/materials"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/building_type_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/info_icon_house"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/building_type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginLeft="8dp"
            android:minHeight="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/building_type_img"
            app:layout_constraintTop_toTopOf="@+id/building_type_img" />

        <ImageView
            android:id="@+id/capacity_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/info_icon_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/building_type_text" />

        <TextView
            android:id="@+id/capacity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginLeft="8dp"
            android:minHeight="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/capacity_img"
            app:layout_constraintTop_toTopOf="@+id/capacity_img" />

        <ImageView
            android:id="@+id/works_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/info_icon_works"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capacity_text" />

        <TextView
            android:id="@+id/works_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginLeft="8dp"
            android:minHeight="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/works_img"
            app:layout_constraintTop_toTopOf="@+id/works_img" />

        <ImageView
            android:id="@+id/fire_safety_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/info_icon_fire_safety"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/works_text" />

        <TextView
            android:id="@+id/fire_safety_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginLeft="8dp"
            android:minHeight="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fire_safety_img"
            app:layout_constraintTop_toTopOf="@+id/fire_safety_img" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/materials_shorter"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fire_safety_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@+id/title2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/resourceList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/resource_adapter_item" />

                <ImageView
                    android:id="@+id/interpan_logo"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:src="@drawable/interpan_logo"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/all_materials_allowed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginHorizontal="12dp"
                    android:text="@string/all_materials_allowed"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/get_materials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_material"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="18dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/card"/>

        <Button
            android:id="@+id/call_seller_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_seller"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_materials" />

        <Button
            android:id="@+id/go_to_website_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="8dp"
            android:text="@string/go_to_website"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/find_another_button"
            app:layout_constraintTop_toBottomOf="@id/call_seller_button" />

        <Button
            android:id="@+id/find_another_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/find_another"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/go_to_website_button"
            app:layout_constraintTop_toBottomOf="@id/call_seller_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>